--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="aside-container">
                 <div class="profile-box">
                     <div class="img">
-                        <img data-testid="slackProfilePicture" src="assets/image300.jpg" alt="@Ruxy">
+                        <img data-testid="slackProfilePicture" src="assets/image.jpeg" alt="@Ruxy">
                     </div>
                     <div class="details">
                         <div class="group">
