--- a/index.html
+++ b/index.html
@@ -59,6 +59,22 @@
                 </div>
             </div>
         </aside>
+        <div class="alternate-container">
+            <div class="link-box">
+                    <a href="https://hng.tech/learn" data-testid="hngLink">
+                        <span>&#128279;</span>
+                        <span>HNG Link</span>
+                    </a>
+                    <a href="https://scrapeanyweb.site" data-testid="scrapeanywebLink">
+                        <span>&#128279;</span>
+                        <span>Scrape My Web</span>
+                    </a>
+                    <a href="https://keyword.dog" data-testid="keywordLink">
+                        <span>&#128279;</span>
+                        <span>Keyword Link</span>
+                    </a>
+            </div>
+        </div>
     </section>
     <script src="assets/script.js"></script>
 </body>
