--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <div class="group">
                             <div>
                                 <span>Display Name:</span>
-                                <h4 data-testid="slackDisplayName">Pure</h4>
+                                <h4 data-testid="slackDisplayName">Ruxy</h4>
                             </div>
                             <div>
                                 <span>Slack Email:</span>
