--- a/index.html
+++ b/index.html
@@ -7,75 +7,51 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <section>
-        <div class="alternate-container">
-            <div class="link-box">
-                    <a href="https://hng.tech/learn" data-testid="hngLink">
-                        <span>&#128279;</span>
-                        <span>HNG Link</span>
-                    </a>
-                    <a href="https://scrapeanyweb.site" data-testid="scrapeanywebLink">
-                        <span>&#128279;</span>
-                        <span>Scrape My Web</span>
-                    </a>
-                    <a href="https://keyword.dog" data-testid="keywordLink">
-                        <span>&#128279;</span>
-                        <span>Keyword Link</span>
-                    </a>
+    <header>
+        <div>
+            <span>Current UTC Time:</span>
+            <h4 data-testid="currentTimeUTC"></h4>
+        </div>
+        <div>
+            <span>Current Day:</span>
+            <h4 data-testid="currentDay"></h4>
+        </div>
+    </header>
+    <section class="hero">
+        <div class="profile-box">
+            <div class="text">
+                <h4 data-testid="slackDisplayName">@Ruxy</h4>
+                <h2>My Tech Journey</h2>
+                <p>Goals for the next 2 years</p>
+            </div>
+            <div class="img">
+                <img data-testid="slackProfilePicture" src="assets/image.jpeg" alt="@Ruxy">
             </div>
         </div>
-        <main>
-            <div class="main-container">
-                <h1>Goals for Next 2 Years</h1>
-                <ul class="goals-list"></ul>
-            </div>
-        </main>
-        <aside>
-            <div class="aside-container">
-                <div class="profile-box">
-                    <div class="img">
-                        <img data-testid="slackProfilePicture" src="assets/image.jpeg" alt="@Ruxy">
-                    </div>
-                    <div class="details">
-                        <div class="group">
-                            <div>
-                                <span>Display Name:</span>
-                                <h4 data-testid="slackDisplayName">Ruxy</h4>
-                            </div>
-                            <div>
-                                <span>Slack Email:</span>
-                                <h4 data-testid="slackEmail">ruxylessur@gmail.com</h4>
-                            </div>
-                        </div>
-                        <div class="group">
-                            <div>
-                                <span>Current UTC Time:</span>
-                                <h4 data-testid="currentTimeUTC"></h4>
-                            </div>
-                            <div>
-                                <span>Current Day:</span>
-                                <h4 data-testid="currentDay"></h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="link-box">
-                    <a href="https://hng.tech/learn" data-testid="hngLink">
-                        <span>&#128279;</span>
-                        <span>HNG Link</span>
-                    </a>
-                    <a href="https://scrapeanyweb.site" data-testid="scrapeanywebLink">
-                        <span>&#128279;</span>
-                        <span>Scrape My Web</span>
-                    </a>
-                    <a href="https://keyword.dog" data-testid="keywordLink">
-                        <span>&#128279;</span>
-                        <span>Keyword Link</span>
-                    </a>
-                </div>
-            </div>
-        </aside>
     </section>
+    <section class="main">
+        <h1>The Roadmap</h1>
+        <ul class="goals-list"></ul>
+    </section>
+    <hr class="divider"/>
+    <div class="link-box">
+        <a href="https://hng.tech/learn" data-testid="hngLink">
+            <span>&#128279;</span>
+            <span>HNG Link</span>
+        </a>
+        <a href="https://scrapeanyweb.site" data-testid="scrapeanywebLink">
+            <span>&#128279;</span>
+            <span>Scrape My Web</span>
+        </a>
+        <a href="https://keyword.dog" data-testid="keywordLink">
+            <span>&#128279;</span>
+            <span>Keyword Link</span>
+        </a>
+    </div>
+    <hr class="divider"/>
+    <footer>
+        &copy; <span class="full-year"></span> | <span data-testid="slackEmail">ruxylessur@gmail.com</span>
+    </footer>
     <script src="assets/script.js"></script>
 </body>
 </html>
