--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="profile-box">
             <div class="text">
                 <h4 data-testid="slackDisplayName">@Ruxy</h4>
-                <h2>My Tech Journey</h2>
+                <h2>My Tech Journey:</h2>
                 <p>Goals for the next 2 years</p>
             </div>
             <div class="img">
